# AIKernel.Core

./: .gitignore  AIKernel.Core.slnx  Directory.Build.props  LICENSE  README-jp.md  README.md  RELEASE_NOTES-ja.md  RELEASE_NOTES.md
.github/workflows/: publish-pypi.yml
AIKernel.Common/: AIKernel.Common.csproj  README.md
AIKernel.Common/Json/: JsonOptions.cs
AIKernel.Common/Logging/: LogUtil.cs
AIKernel.Common/Results/: Either.cs  Result.cs
docs/: README-jp.md  README.md
docs/development/: concept-elevation.md  ctg-governance-integration-jp.md  ctg-governance-integration.md  cuda-capability-development-guide-jp.md  cuda-capability-development-guide.md
docs/operations/: release-checklist-jp.md  release-checklist.md
docs/release/: pypi-trusted-publishing.md
docs/user-guide/: index-ja.md  index.md
python/: CMakeLists.txt  LICENSE  README-ja.md  README.md  RELEASE_NOTES-ja.md  RELEASE_NOTES.md  pyproject.toml
python/src/aikernel/: __init__.py  bindings.py  managed.py  monads.py
python/src/aikernel_net/: __init__.py  api_catalog.py  core_contracts.py  managed.py  monads.py  provider_manifest.py  standard_providers.py
python/src/aikernel_net/samples/: __init__.py
python/src/aikernel_net/samples/ctg_rom/: __init__.py
python/tests/: test_bindings.py  test_ctg_rom_sample.py  test_managed.py  test_monads.py  test_package_scope.py  test_provider_manifest_and_core_contracts.py  test_standard_providers.py
src/AIKernel.Common/: AIKernel.Common.csproj  README-ja.md  README.md
src/AIKernel.Common/Exceptions/: CommonException.cs  docs.en.xml  docs.ja.xml
src/AIKernel.Common/IO/: FileUtil.cs  PathUtil.cs  docs.en.xml  docs.ja.xml
src/AIKernel.Common/Json/: JsonFile.cs  JsonOptions.cs  JsonUtil.cs  docs.en.xml  docs.ja.xml
src/AIKernel.Common/Logging/: LogUtil.cs  docs.en.xml  docs.ja.xml
src/AIKernel.Common/Results/: Async.cs  Either.cs  EitherWhereExtensions.cs  ErrorContext.cs  ExecutionMetadataKeys.cs  MonadicDecision.cs  Option.cs  OptionResultExtensions.cs  OptionWhereExtensions.cs  PipelineStep.cs  PipelineStepMetadataKeys.cs  ReplayMetadataKeys.cs  Result.cs  ResultMetadataKeys.cs  ResultStep.cs  ResultStepIdentity.cs  ResultStepReplayLogEntry.cs  ResultStepWhereExtensions.cs  ResultWhereExtensions.cs  SemanticDelta.cs  TaskEitherExtensions.cs  TaskOptionExtensions.cs  TaskResultExtensions.cs  TaskResultStepExtensions.cs  TaskResultWhereExtensions.cs  Try.cs  docs.en.xml  docs.ja.xml
src/AIKernel.Core/: AIKernel.Core.csproj  Class1.cs
src/AIKernel.Core/Abstractions/: CanonicalizedRomDto.cs  ContextAssemblyDecision.cs  ContextAssemblyException.cs  ContextAssemblyGovernanceException.cs  ContextAssemblyRequest.cs  ContextAssemblyScope.cs  ContextPromptBlock.cs  ExecutionError.cs  ExecutionOptions.cs  ExecutionStatus.cs  ExecutionUsage.cs  GeneratedPrompt.cs  IContextAssembler.cs  IContextAssemblyGovernancePolicy.cs  IContextCollectionFactory.cs  IContextHashCalculator.cs  IContextPromptProjector.cs  IKernelExecutor.cs  IKernelModelProviderSelector.cs  IKernelRequestHasher.cs  IKernelTransactionIdFactory.cs  IKernelVfsSessionFactory.cs  IMarkdownFrontMatterParser.cs  IModelPromptCapabilityResolver.cs  IPromptGenerator.cs  IRomId.cs  IRomLoader.cs  IRomPathResolver.cs  IRomSignatureVerifier.cs  ISecureCredentialProvider.cs  ISecureOptions.cs  KernelExecutionRequest.cs  KernelRequest.cs  KernelRequestExecutionResult.cs  KernelTransactionSnapshot.cs  MarkdownFrontMatterDocument.cs  ModelMessageRoles.cs  ModelPromptCapability.cs  PromptGenerationException.cs  PromptGenerationOptions.cs  (+15 more)
src/AIKernel.Core/Capabilities/: FailClosedCapabilityModuleInvoker.cs  InMemoryCapabilityModuleRegistry.cs  docs.en.xml  docs.ja.xml
src/AIKernel.Core/ChatHistory/: ChatHistoryRomExporter.cs  HistoryRomContractMapper.cs  HistoryRomErrors.cs  HistoryRomMetadata.cs  HistoryRomMetadataValidator.cs  HistoryRomPath.cs  HistoryRomProvider.cs  HistoryRomRegistry.cs  HistoryRomStore.cs
src/AIKernel.Core/Concepts/: ConceptElevationFacades.cs
src/AIKernel.Core/Context/: AssembledContextSnapshot.cs  ContextAssembler.cs  ContextAssemblyException.cs  ContextAssemblyGovernanceException.cs  ContextCollectionSnapshot.cs  DefaultContextCollectionFactory.cs  DefaultContextHashCalculator.cs  DictionaryRomPathResolver.cs  RomIdentityMismatchException.cs  SecurityTagContextAssemblyPolicy.cs  docs.en.xml  docs.ja.xml
src/AIKernel.Core/Control/: BonsaiRuleEngine.cs
src/AIKernel.Core/Dsl/: CompiledDslPipeline.cs  DelegateKernelPipeline.cs  DslContractMapper.cs  DslDocument.cs  DslDocumentParser.cs  DslExecutionErrors.cs  DslPipelineCompiler.cs  DslPipelineLinqExtensions.cs  DslResultStepAppender.cs  DslRomHasher.cs  (+9 more)
src/AIKernel.Cuda.Libtorch.2.12-cuda13.0/: AIKernel.Cuda.Libtorch.2.12-cuda13.0.csproj  README.md
src/AIKernel.Cuda.Libtorch.2.12-cuda13.0/Native/: CMakeLists.txt  libtorch_bridge.cpp
src/AIKernel.Hosting/: AIKernel.Hosting.csproj  AIKernelCoreBuilder.cs  AIKernelCoreHostingExtensions.cs  Class1.cs  ModelProviderHostingExtensions.cs  SecureCredentialResolver.cs  SecureHostingExtensions.cs  SecureOptionsStartupValidator.cs  docs.en.xml  docs.ja.xml
src/AIKernel.Kernel/: AIKernel.Kernel.csproj  Class1.cs  FailClosedGuard.cs  FailClosedPdp.cs  FailClosedProviderRouter.cs  Kernel .cs  Kernel.cs  KernelFacadeMetadataKeys.cs  KernelFailureResultFactory.cs  KernelHostingExtensions.cs  KernelProviderRoutingDecision.cs  KernelProviderRoutingDecisionExtensions.cs  KernelProviderRoutingDecisionFactory.cs  KernelRequestExecutionExtensions.cs  KernelRequestHasher.cs  KernelRequestValidationException.cs  KernelTransactionIdFactory.cs  KernelVfsSessionFactory.cs  StaticKernelModelProviderSelector.cs  docs.en.xml  docs.ja.xml
tests/AIKernel.Core.Tests/: AIKernel.Core.Tests.csproj  BonsaiEngineTests.cs  UnitTest1.cs
tests/AIKernel.IntegrationTests/: AIKernel.IntegrationTests.csproj  CoreHostingExtensionsTests.cs  OpenAICompatibleProviderTests.cs  OpenAIHostingExtensionsTests.cs  TestProviderCapabilities.cs  UnitTest1.cs
tests/AIKernel.TestKit/: AIKernel.TestKit.csproj  Class1.cs
(+247 files in other folders)
