[build-system]
requires = ["scikit-build-core", "setuptools", "wheel"]
build-backend = "scikit_build_core.build"

[project]
name = "aikernel"
version = "0.0.5"
description = "Python binding for AIKernel Native ABI capability modules."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Takuya Sogawa" }
]
keywords = [
  "aikernel",
  "native-abi",
  "capability",
  "libtorch",
  "cuda"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13"
]

[project.optional-dependencies]
test = [
  "pytest>=9.0"
]

[tool.scikit-build]
cmake.source-dir = "."
wheel.packages = ["src/aikernel"]

[tool.scikit-build.cmake.define]
AIKERNEL_PYTHON_BUILD_NATIVE = "OFF"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
