[build-system]
requires = ["scikit-build-core", "setuptools", "wheel"]
build-backend = "scikit_build_core.build"

[project]
name = "aikernel-net"
version = "0.1.3"
description = "Python binding for AIKernel Core 0.1.3 functional primitives, GPU contracts, provider contracts, manifests, and managed assembly discovery."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  { name = "Takuya Sogawa" }
]
keywords = [
  "aikernel-net",
  "capability",
  "monads",
  "managed-assemblies",
  "provider-manifest",
  "standard-providers"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13"
]

[project.optional-dependencies]
test = [
  "pytest>=9.0"
]

[tool.scikit-build]
cmake.source-dir = "."

[tool.scikit-build.wheel]
packages = ["src/aikernel_net"]
py-api = "py3"
platlib = false

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
